# CoreWorkPal

./: .gitignore  AGENTS.md.md  README.md  WINDOWS_SIGNING.md  index.html  package.json  pnpm-lock.yaml  tsconfig.corecat-tests.json  vite.config.ts
.docs/: auto_update_progress.md  corecat_animation_compression_guide.md  corecat_animation_progress.md  daily_work_assessment_development_spec.md
CoreWorkPalUI/: 02A_CoreWorkPal_Animation_Effects_Spec.md  02_CoreWorkPal_UI_Design_AI_Brief.md  03_CoreWorkPal_Pure_UI_Design.md  CoreCat 骨骼动画动力学与 VFX 节点开发全集.md  CoreWorkPal 专项规范：CoreCat 游戏级动画特效与动作开发文档.md  index.css  index.html  main.js  package-lock.json  package.json  vite.config.js
scripts/: compress_avatars.py  copy-avatars.cjs  copy-avatars.js  crop_avatars.py  gen_ico.py  generate_badges.py  import-windows-signing-certificate.ps1  inspect-dimensions.cjs  optimize-animation-pngs.mjs  run-corecat-animation-tests.mjs  run-tauri-dev.ps1
src/: main.tsx  routeTypes.ts  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  events.rs  input_activity.rs  lib.rs  main.rs  models.rs  taskbar_embed.rs
src-tauri/src/achievements/: definitions.rs  mod.rs  runtime.rs  seed.md  seed.rs  validation.rs
src-tauri/src/commands/: mod.rs  updater.rs
src-tauri/src/monitoring/: fake.rs  mod.rs  sysinfo_adapter.rs  windows_perf.rs
src-tauri/src/pet/: mod.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/window_manager/: mod.rs
src-tauri/src/workshop/: mod.rs
(+134 files in other folders)
