[package]
name = "core-work-pal"
version = "0.1.5"
description = "CoreWorkPal desktop scaffold"
authors = ["CoreWorkPal"]
edition = "2021"

[lib]
name = "core_work_pal_lib"
crate-type = ["rlib"]

[[bin]]
name = "core-work-pal"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
futures-util = "0.3"
hex = "0.4"
reqwest = { version = "0.11", features = ["json", "stream"] }
semver = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sysinfo = "0.30.13"
tauri = { version = "2.6", features = ["tray-icon", "image-png"] }
tokio = { version = "1", features = ["sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_Graphics_Dxgi", "Win32_Security", "Win32_System_Performance", "Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
